# Axiom

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
Docs/: axiom-project-plan.md
crates/axiom-ai/: Cargo.toml
crates/axiom-ai/src/: behavior_tree.rs  lib.rs
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: commands.rs  config.rs  main.rs  repl.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: events.rs  lib.rs  tick.rs
crates/axiom-core/src/ecs/: component.rs  entity.rs  mod.rs  system.rs  world.rs
crates/axiom-lang/: Cargo.toml
crates/axiom-lang/src/: ast.rs  evaluator.rs  grammar.pest  lib.rs  parser.rs  units.rs
crates/axiom-physics/: Cargo.toml
crates/axiom-physics/src/: lib.rs
crates/axiom-physics/src/atmosphere/: mod.rs
crates/axiom-physics/src/fluids/: mod.rs
crates/axiom-physics/src/materials/: mod.rs
crates/axiom-physics/src/mechanics/: mod.rs
crates/axiom-physics/src/thermo/: mod.rs
crates/axiom-render/: Cargo.toml
crates/axiom-render/src/: detail_view.rs  lib.rs
scenarios/: test_basic.ax
stdlib/entities/: humanoid.ax
stdlib/materials/: fluids.ax  metals.ax  soils.ax  stones.ax  woods.ax
stdlib/structures/: bridges.ax  buildings.ax
stdlib/terrains/: european_alpine.ax
stdlib/weather/: temperate.ax
tests/: validate_phases.rs
tests/integration/: test_scenario_load.rs
tests/physics/: test_free_fall.rs
