[package]
name = "axiom-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
rustyline = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axiom-core = { workspace = true }
axiom-lang = { workspace = true }
